# freshbox

./: LICENSE  README.md  freshbox.py  pyproject.toml
config/: packages.toml
installer/: detect.py  packages.py  runner.py
ucomp_freshbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
